--- a/.github/workflows/jd_blueCoin.yml
+++ b/.github/workflows/jd_blueCoin.yml
@@ -19,8 +19,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          repository: shitou12/wsc11
+        #with:
+          #repository: shitou12/wsc11
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
