--- a/.github/workflows/qqreads.yml
+++ b/.github/workflows/qqreads.yml
@@ -23,6 +23,8 @@ jobs:
       - name: Checkout
         run: |
           git clone https://github.com/ziye12/JavaScript.git ~/JavaScript
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
           repository: shitou12/qqreadworkflow
       - name: Use Node.js 12.x
