--- a/.github/workflows/jd_pubg.yml
+++ b/.github/workflows/jd_pubg.yml
@@ -6,7 +6,7 @@ name: jd_pubg
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 1,4,7,10,12,16,22 * * *'
+    - cron: '0 * * *'
   watch:
     types: started
   repository_dispatch:
