--- a/.github/workflows/jd_pubg.yml
+++ b/.github/workflows/jd_pubg.yml
@@ -6,11 +6,11 @@ name: jd_pubg
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 * * *'
+    - cron: '0 16 * * *'
   watch:
     types: started
   repository_dispatch:
-    types:jd_pubg
+    types: jd_pubg
 jobs:
   build:
 
@@ -19,8 +19,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-         with:
-          repository: shitou12/wsc11
+        #with:
+          #repository: shitou12/wsc11
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -35,18 +35,19 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 【PUBG脚本】'
+      - name: '运行 【PUBG】'
         run: |
           node jd_pubg.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
+          MARKET_COIN_TO_BEANS: ${{ secrets.MARKET_COIN_TO_BEANS }}
+          MARKET_REWARD_NOTIFY: ${{ secrets.MARKET_REWARD_NOTIFY }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
-          BARK_SOUND: ${{ secrets.BARK_SOUND }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
           IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
-          JD_818_SHAREID_NOTIFY: ${{ secrets.JD_818_SHAREID_NOTIFY }}
