--- a/.github/workflows/jd_live.yml
+++ b/.github/workflows/jd_live.yml
@@ -6,7 +6,7 @@ name: jd_live
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 1,4,7,10,12,16,22 * * *'
+    - cron: '10-20/5 12 * * *'
   watch:
     types: started
   repository_dispatch:
