--- a/.github/workflows/jkd.yml
+++ b/.github/workflows/jkd.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         #with:
-          repository: shitou12/wsc11
+          #repository: shitou12/wsc11
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
