--- a/.github/workflows/jkd.yml
+++ b/.github/workflows/jkd.yml
@@ -6,7 +6,7 @@ name: jkd
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 1,4,7,10,12,16,22 * * *'
+    - cron: '0,30 * * * *'
   watch:
     types: started
   repository_dispatch:
