--- a/.github/workflows/jkd.yml
+++ b/.github/workflows/jkd.yml
@@ -35,7 +35,7 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 【手机狂欢城脚本】'
+      - name: '运行 【聚看点阅读】'
         run: |
           node jkd.js
         env:
