--- a/.github/workflows/jd_immortal.yaml
+++ b/.github/workflows/jd_immortal.yaml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 京东神仙书院
+name: 京东神仙测试
 
 on:
     workflow_dispatch:
